# iridia-ros-robot

./: .gitignore  launch.sh
src/experiments_utils/: CMakeLists.txt  package.xml
src/experiments_utils/launch/: read_sensors.launch
src/experiments_utils/msg/: Distance.msg  Distances.msg  Manage.msg  Positions.msg
src/experiments_utils/output/: description.txt
src/experiments_utils/scripts/: experiment_manager.py  odometry_republisher.py  sensor_measurement.py  utils.py
